--- a/ReceiptVault/ReceiptVault/MainPage.xaml
+++ b/ReceiptVault/ReceiptVault/MainPage.xaml
@@ -8,7 +8,11 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Button x:Name="button" Content="testImageScan" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" Height="36" Width="340" Click="button_Click"/>
+        <Button x:Name="button" Content="testImageScan" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="168,70,0,0" Height="36" Width="335" Click="button_Click"/>
+        <Button x:Name="buttonNewReceipt" Content="Nieuwe bon" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,70,0,0" Height="36" Width="100" Click="buttonNewReceipt_Click"/>
+
 
     </Grid>
 </Page>
+    
+    
