--- a/ReceiptVault/ReceiptVault/newEntryScreenScreen.xaml
+++ b/ReceiptVault/ReceiptVault/newEntryScreenScreen.xaml
@@ -10,10 +10,9 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
         <Rectangle Margin="0,5,0,0" Height="1" Fill="#ff0000" Visibility="Collapsed"/>
-        <Canvas Height="300" Margin="5" x:Name="canvas" Width="480">
+        <Canvas Margin="429,10,10,150" x:Name="canvas">
             <Image x:Name="imgNewReceipt" HorizontalAlignment="Left" Height="200" VerticalAlignment="Top" Width="200" PointerPressed="dragStart" PointerReleased="dragFinish" PointerMoved="dragMove"/>
             <Rectangle x:Name="rect" StrokeThickness="3" Stroke="#ff0000"></Rectangle>
-
         </Canvas>
 
         <Button x:Name="button" Content="Maak foto" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="88,283,0,0" Click="button_Click"/>
