--- a/ReceiptVault/ReceiptVault/VATScreen.xaml
+++ b/ReceiptVault/ReceiptVault/VATScreen.xaml
@@ -25,6 +25,7 @@
         <Charting:Chart x:Name="VATChart" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,160,72,0" Width="681" Height="421">
             <Charting:LineSeries Title="Store Selection" Margin="0" IndependentValuePath="Name" DependentValuePath="Amount" IsSelectionEnabled="true"/>
         </Charting:Chart>
+        <DatePicker HorizontalAlignment="Left" Margin="434,81,0,0" VerticalAlignment="Top"/>
 
 
 
