--- a/ReceiptVault/ReceiptVault/newEntryScreenScreen.xaml
+++ b/ReceiptVault/ReceiptVault/newEntryScreenScreen.xaml
@@ -16,7 +16,7 @@
             <Image x:Name="imageCropped" Height="151" Width="145" Canvas.Left="-199" Canvas.Top="49" x:FieldModifier="public"/>
         </Canvas>
 
-        <Button x:Name="button" Content="Maak foto" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="180,289,0,0" Click="button_Click"/>
+        <Button x:Name="button" Content="Maak foto" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="114,289,0,0" Click="button_Click"/>
 
         <MediaElement x:Name="mediaPreivew"
               Width="320" />
@@ -25,14 +25,15 @@
                    " VerticalAlignment="Top"/>
         <TextBox x:Name="textBoxShopName" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Margin="485,255,0,0" Width="145" PlaceholderText="-"/>
         <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="390,267,0,0" TextWrapping="Wrap" Text="Winkel naam" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBoxDate" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Margin="485,299,0,0" Width="145" PlaceholderText="-"/>
-        <TextBlock x:Name="textBlock_Copy1" HorizontalAlignment="Left" Margin="390,311,0,0" TextWrapping="Wrap" Text="Datum" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBoxDateVAT" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Margin="485,340,0,0" Width="145" PlaceholderText="-"/>
+        <TextBlock x:Name="textBlock_Copy1" HorizontalAlignment="Left" Margin="390,308,0,0" TextWrapping="Wrap" Text="Datum" VerticalAlignment="Top"/>
+        <TextBox x:Name="textBoxVAT" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Margin="485,340,0,0" Width="145" PlaceholderText="-"/>
         <TextBlock x:Name="textBlock_Copy2" HorizontalAlignment="Left" Margin="390,352,0,0" TextWrapping="Wrap" Text="BTW" VerticalAlignment="Top"/>
         <Button x:Name="buttonAccept" Content="Accepteren" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="530,377,0,0" Height="32" Width="100" Click="buttonAccept_Click"/>
         <RelativePanel HorizontalAlignment="Left" Height="1088" VerticalAlignment="Top" Width="268">
             <TextBlock x:Name="textBlockHome" TextWrapping="Wrap" Text="Home" Tapped="textBlockHome_Tapped" FontSize="22" FontWeight="Bold" Margin="14,50,-242,-102" RenderTransformOrigin="0.505,0.507" />
+            <CalendarDatePicker HorizontalAlignment="Left" Height="32" VerticalAlignment="Top" Width="127"/>
         </RelativePanel>
         <Image x:Name="image" HorizontalAlignment="Left" Height="100" Margin="331,163,0,0" VerticalAlignment="Top" Width="100"/>
+        <CalendarDatePicker Name="picker" HorizontalAlignment="Left" Height="39" Margin="485,296,0,0" VerticalAlignment="Top" Width="145"/>
     </Grid>
 </Page>
