--- a/ReceiptVault/ReceiptVault/VATScreen.xaml
+++ b/ReceiptVault/ReceiptVault/VATScreen.xaml
@@ -9,6 +9,18 @@
     mc:Ignorable="d"  Width="1187">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,0.2,0">
+        <RelativePanel HorizontalAlignment="Left" Height="1080" VerticalAlignment="Top" Width="142">
+            <RelativePanel.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFDEF3FF" Offset="0.994"/>
+                    <GradientStop Color="White"/>
+                </LinearGradientBrush>
+            </RelativePanel.Background>
+            <TextBlock x:Name="textBlockHome" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top" FontSize="22" FontWeight="Bold" Tapped="homeClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited" Margin="10,10,-10,-10.333"/>
+            <TextBlock x:Name="textBlockNieuweBon" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Nieuwe bon" VerticalAlignment="Top" Margin="10,42,-43.333,-10.333" FontSize="22" FontWeight="Bold" Tapped="newRecieptClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
+            <TextBlock x:Name="textBlockUitgaven" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Uitgaven" VerticalAlignment="Top" Margin="10,74,-10.333,-10.333" FontSize="22" FontWeight="Bold" Tapped="spendingsClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
+            <TextBlock x:Name="textBlockBTW" HorizontalAlignment="Left" TextWrapping="Wrap" Text="BTW" VerticalAlignment="Top" Margin="10,106,-10.333,-10.333" FontSize="22" FontWeight="Bold" Tapped="VATClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
+        </RelativePanel>
         <MediaElement x:Name="mediaPreivew"
               Width="320" />
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="202,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="66" Width="289" FontSize="40">
@@ -38,7 +50,6 @@
         </TextBlock>
         <CalendarDatePicker HorizontalAlignment="Left" Margin="468,203,0,0" VerticalAlignment="Top"/>
         <CalendarDatePicker HorizontalAlignment="Left" Margin="684,203,0,0" VerticalAlignment="Top"/>
-        <TextBlock x:Name="homeText" HorizontalAlignment="Left" Margin="10,60,0,0" TextWrapping="Wrap" Text="HOME" VerticalAlignment="Top" FontWeight="Bold" FontSize="24" PointerPressed="homeText_PointerPressed"/>
 
 
 
