--- a/ReceiptVault/ReceiptVault/spendingsScreen.xaml
+++ b/ReceiptVault/ReceiptVault/spendingsScreen.xaml
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:system="using:System"
+    xmlns:charting="using:WinRTXamlToolkit.Controls.DataVisualization.Charting"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -23,15 +24,22 @@
         </RelativePanel>
         <TextBox x:Name="textBoxSearch" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Margin="229,87,0,0" Width="253" PlaceholderText="Voer hier een winkelnaam in" TextChanged="TextBoxSearch_OnTextChanged"/>
         <ListBox x:Name="listBoxStores" HorizontalAlignment="Left" Height="790" VerticalAlignment="Top" Width="253" Margin="229,119,0,0"/>
-        <ComboBox x:Name="comboBoxWeek" HorizontalAlignment="Left" VerticalAlignment="Top" Width="188" Margin="631,727,0,0" Height="38" SelectionChanged="ComboBoxWeek_OnSelectionChanged"/>
-        <ComboBox x:Name="comboBoxMonth" HorizontalAlignment="Left" VerticalAlignment="Top" Width="188" Margin="833,731,0,0" Height="38" SelectionChanged="ComboBoxWeek_OnSelectionChanged"/>
-        <ComboBox x:Name="comboBoxYear" HorizontalAlignment="Left" Width="188" Margin="1036,732,0,0" Height="37"/>
+        <ComboBox x:Name="comboBoxWeek" HorizontalAlignment="Left" VerticalAlignment="Top" Width="188" Margin="631,732,0,0" Height="38" SelectionChanged="ComboBoxWeek_OnSelectionChanged"/>
+        <ComboBox x:Name="comboBoxMonth" HorizontalAlignment="Left" VerticalAlignment="Top" Width="188" Margin="833,732,0,0" Height="38" SelectionChanged="ComboBoxWeek_OnSelectionChanged"/>
+        <ComboBox x:Name="comboBoxYear" HorizontalAlignment="Left" Width="188" Margin="1036,732,0,0" Height="38" SelectionChanged="ComboBoxWeek_OnSelectionChanged"/>
 
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="552,731,0,0" TextWrapping="Wrap" Text="Filteren op:" VerticalAlignment="Top"/>
+
+        <charting:Chart x:Name="spendingChart" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,160,88,0" Width="948" Height="547">
+            <charting:ColumnSeries x:Name="spendings" Title="Uitgaves in euro" Margin="0" IndependentValuePath="Date" DependentValuePath="Total" IsSelectionEnabled="true"/>
+        </charting:Chart>
+
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="552,749,0,0" TextWrapping="Wrap" Text="Filteren op:" VerticalAlignment="Top"/>
         <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="631,707,0,0" TextWrapping="Wrap" Text="Week" VerticalAlignment="Top" RenderTransformOrigin="0.279,0.483"/>
         <TextBlock x:Name="textBlock1_Copy" HorizontalAlignment="Left" Margin="833,707,0,0" TextWrapping="Wrap" Text="Maand" VerticalAlignment="Top" RenderTransformOrigin="0.279,0.483"/>
         <TextBlock x:Name="textBlock1_Copy1" HorizontalAlignment="Left" Margin="1036,707,0,0" TextWrapping="Wrap" Text="Jaar" VerticalAlignment="Top" RenderTransformOrigin="0.279,0.483"/>
         <Button x:Name="buttonReset" Content="Reset" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="527,87,0,0" Width="169" Height="32" Click="buttonReset_Click"/>
+
+
 
     </Grid>
 
