--- a/ReceiptVault/ReceiptVault/MainPage.xaml
+++ b/ReceiptVault/ReceiptVault/MainPage.xaml
@@ -9,24 +9,24 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="10,0,0,-53">
-        <RelativePanel HorizontalAlignment="Left" Height="1123" VerticalAlignment="Top" Width="142" Margin="-5,0,0,0">
+        <RelativePanel HorizontalAlignment="Left" Width="204">
             <RelativePanel.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFDEF3FF" Offset="0.994"/>
                     <GradientStop Color="White"/>
                 </LinearGradientBrush>
             </RelativePanel.Background>
-            <TextBlock x:Name="textBlockHome" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top" FontSize="22" FontWeight="Bold" Tapped="homeClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited" Margin="10,10,-10,-10.333"/>
-            <TextBlock x:Name="textBlockNieuweBon" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Nieuwe bon" VerticalAlignment="Top" Margin="10,42,-43.333,-10.333" FontSize="22" FontWeight="Bold" Tapped="newRecieptClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
-            <TextBlock x:Name="textBlockUitgaven" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Uitgaven" VerticalAlignment="Top" Margin="10,74,-10.333,-10.333" FontSize="22" FontWeight="Bold" Tapped="spendingsClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
-            <TextBlock x:Name="textBlockBTW" HorizontalAlignment="Left" TextWrapping="Wrap" Text="BTW" VerticalAlignment="Top" Margin="10,106,-10.333,-10.333" FontSize="22" FontWeight="Bold" Tapped="VATClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
+            <TextBlock x:Name="textBlockHome" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top" FontSize="22" FontWeight="Bold" Tapped="homeClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited" Margin="43,10,-43,-10"/>
+            <TextBlock x:Name="textBlockNieuweBon" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Nieuwe bon" VerticalAlignment="Top" Margin="43,44,-76,-12" FontSize="22" FontWeight="Bold" Tapped="newRecieptClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
+            <TextBlock x:Name="textBlockUitgaven" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Uitgaven" VerticalAlignment="Top" Margin="43,78,-43,-14" FontSize="22" FontWeight="Bold" Tapped="spendingsClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
+            <TextBlock x:Name="textBlockBTW" HorizontalAlignment="Left" TextWrapping="Wrap" Text="BTW" VerticalAlignment="Top" Margin="43,112,-43,-16" FontSize="22" FontWeight="Bold" Tapped="VATClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
+            <Image x:Name="image" HorizontalAlignment="Left" Height="28" VerticalAlignment="Top" Width="28" Source="Assets/home.bmp" Margin="10,11,0,-1"/>
+            <Image x:Name="image_Copy" HorizontalAlignment="Left" Height="28" VerticalAlignment="Top" Width="28" Source="Assets/file.bmp" Margin="10,50,0,-40"/>
+            <Image x:Name="image_Copy1" HorizontalAlignment="Left" Height="28" VerticalAlignment="Top" Width="28" Source="Assets/spending.bmp" Margin="10,78,0,-68"/>
+            <Image x:Name="image_Copy2" HorizontalAlignment="Left" Height="28" VerticalAlignment="Top" Width="28" Source="Assets/graph.png" Margin="10,113,0,-103"/>
         </RelativePanel>
-
-        <ScrollViewer Margin="142,0,0,0">
-            <controls:WrapPanel x:Name="panelReceipts" Margin="142,10,10,10" Width="Auto" HorizontalAlignment="Stretch">
-                <TextBlock Text="Here is the news that should wrap around." TextWrapping="Wrap"/>
-            </controls:WrapPanel>
-        </ScrollViewer>
+        <ScrollViewer Margin="142,127,0,0"/>
+        <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top" Margin="209,10,0,0" FontSize="48"/>
     </Grid>
 </Page>
     
