--- a/ReceiptVault/ReceiptVault/newEntryScreenScreen.xaml
+++ b/ReceiptVault/ReceiptVault/newEntryScreenScreen.xaml
@@ -8,40 +8,45 @@
     mc:Ignorable="d" Height="1088" Width="2256">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="8,0,-8,0">
-        <RelativePanel HorizontalAlignment="Left" Height="1123" VerticalAlignment="Top" Width="142" Margin="0,0,0,-35">
+        <RelativePanel HorizontalAlignment="Left" Height="1080" VerticalAlignment="Top" Width="204">
             <RelativePanel.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFDEF3FF" Offset="0.994"/>
                     <GradientStop Color="White"/>
                 </LinearGradientBrush>
             </RelativePanel.Background>
-            <TextBlock x:Name="textBlockHome" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top" FontSize="22" FontWeight="Bold" Tapped="homeClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited" Margin="10,10,-10,-10.333"/>
-            <TextBlock x:Name="textBlockNieuweBon" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Nieuwe bon" VerticalAlignment="Top" Margin="10,42,-43.333,-10.333" FontSize="22" FontWeight="Bold" Tapped="newRecieptClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
-            <TextBlock x:Name="textBlockUitgaven" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Uitgaven" VerticalAlignment="Top" Margin="10,74,-10.333,-10.333" FontSize="22" FontWeight="Bold" Tapped="spendingsClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
-            <TextBlock x:Name="textBlockBTW" HorizontalAlignment="Left" TextWrapping="Wrap" Text="BTW" VerticalAlignment="Top" Margin="10,106,-10.333,-10.333" FontSize="22" FontWeight="Bold" Tapped="VATClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
+            <TextBlock x:Name="textBlockHome" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top" FontSize="22" FontWeight="Bold" Tapped="homeClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited" Margin="43,10,-43,-10"/>
+            <TextBlock x:Name="textBlockNieuweBon" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Nieuwe bon" VerticalAlignment="Top" Margin="43,44,-76,-12" FontSize="22" FontWeight="Bold" Tapped="newRecieptClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
+            <TextBlock x:Name="textBlockUitgaven" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Uitgaven" VerticalAlignment="Top" Margin="43,78,-43,-14" FontSize="22" FontWeight="Bold" Tapped="spendingsClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
+            <TextBlock x:Name="textBlockBTW" HorizontalAlignment="Left" TextWrapping="Wrap" Text="BTW" VerticalAlignment="Top" Margin="43,112,-43,-16" FontSize="22" FontWeight="Bold" Tapped="VATClicked" PointerEntered="TextBlockHome_OnPointerEntered" PointerExited="TextBlockHome_OnPointerExited"/>
+            <Image x:Name="image" HorizontalAlignment="Left" Height="28" VerticalAlignment="Top" Width="28" Source="Assets/home.bmp" Margin="10,11,0,-1"/>
+            <Image x:Name="image_Copy" HorizontalAlignment="Left" Height="28" VerticalAlignment="Top" Width="28" Source="Assets/file.bmp" Margin="10,50,0,-40"/>
+            <Image x:Name="image_Copy1" HorizontalAlignment="Left" Height="28" VerticalAlignment="Top" Width="28" Source="Assets/spending.bmp" Margin="10,78,0,-68"/>
+            <Image x:Name="image_Copy2" HorizontalAlignment="Left" Height="28" VerticalAlignment="Top" Width="28" Source="Assets/graph.png" Margin="10,113,0,-103"/>
         </RelativePanel>
 
 
         <Rectangle Margin="0,5,0,0" Height="1" Fill="#ff0000" Visibility="Collapsed"/>
-        <Canvas Margin="429,10,10,150" x:Name="canvas">
-            <Image x:Name="imgNewReceipt" HorizontalAlignment="Left" Height="200" VerticalAlignment="Top" Width="200" PointerPressed="dragStart" PointerReleased="dragFinish" PointerMoved="dragMove"/>
-            <Rectangle x:Name="rect" StrokeThickness="3" Stroke="#ff0000"></Rectangle>
+        <Canvas Margin="637,10,362,218" x:Name="canvas">
+            <Image x:Name="imgNewReceipt" HorizontalAlignment="Left" Height="364" VerticalAlignment="Top" Width="364" PointerPressed="dragStart" PointerReleased="dragFinish" PointerMoved="dragMove"/>
+            <Rectangle x:Name="rect" StrokeThickness="3" Stroke="#ff0000" Visibility="Collapsed"></Rectangle>
         </Canvas>
 
-        <Button x:Name="button" Content="Maak foto" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="210,377,0,0" Click="button_Click"/>
+        <Button x:Name="button" Content="Maak foto" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="228,394,0,0" Click="button_Click" Height="103" Width="168"/>
 
         <MediaElement x:Name="mediaPreivew"
               Width="320" />
-        <TextBox x:Name="textBoxTotal" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Margin="485,215,0,0" Width="145" PlaceholderText="-"/>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="390,227,0,0" TextWrapping="Wrap" Text="Totaal bedrag
+        <TextBox x:Name="textBoxTotal" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Margin="732,394,0,0" Width="265" PlaceholderText="-"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="637,406,0,0" TextWrapping="Wrap" Text="Totaal bedrag
                    " VerticalAlignment="Top"/>
-        <TextBox x:Name="textBoxShopName" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Margin="485,255,0,0" Width="145" PlaceholderText="-"/>
-        <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="390,267,0,0" TextWrapping="Wrap" Text="Winkel naam" VerticalAlignment="Top"/>
-        <TextBlock x:Name="textBlock_Copy1" HorizontalAlignment="Left" Margin="390,308,0,0" TextWrapping="Wrap" Text="Datum" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBoxVAT" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Margin="485,340,0,0" Width="145" PlaceholderText="-"/>
-        <TextBlock x:Name="textBlock_Copy2" HorizontalAlignment="Left" Margin="390,352,0,0" TextWrapping="Wrap" Text="BTW" VerticalAlignment="Top"/>
-        <Button x:Name="buttonAccept" Content="Accepteren" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="530,377,0,0" Height="32" Width="100" Click="buttonAccept_Click"/>
-     
-        <CalendarDatePicker Name="picker" HorizontalAlignment="Left" Height="39" Margin="485,296,0,0" VerticalAlignment="Top" Width="145"/>
+        <TextBox x:Name="textBoxShopName" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Margin="732,434,0,0" Width="265" PlaceholderText="-"/>
+        <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="637,446,0,0" TextWrapping="Wrap" Text="Winkel naam" VerticalAlignment="Top"/>
+        <TextBlock x:Name="textBlock_Copy1" HorizontalAlignment="Left" Margin="637,487,0,0" TextWrapping="Wrap" Text="Datum" VerticalAlignment="Top"/>
+        <TextBox x:Name="textBoxVAT" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Margin="732,519,0,0" Width="265" PlaceholderText="-"/>
+        <TextBlock x:Name="textBlock_Copy2" HorizontalAlignment="Left" Margin="637,531,0,0" TextWrapping="Wrap" Text="BTW" VerticalAlignment="Top"/>
+        <Button x:Name="buttonAccept" Content="Accepteren" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="897,556,0,0" Height="32" Width="100" Click="buttonAccept_Click"/>
+
+        <CalendarDatePicker Name="picker" HorizontalAlignment="Left" Height="39" Margin="732,475,0,0" VerticalAlignment="Top" Width="265"/>
+        <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Nieuwe bon" VerticalAlignment="Top" Margin="209,10,0,0" FontSize="48"/>
     </Grid>
 </Page>
